# structml

./: README.md  pyproject.toml  requirements.txt  setup.py  structml.py
assets/logo/: logo_no_scale.xcf
structml/: line_heal.py
structml.egg-info/: PKG-INFO  SOURCES.txt
structml_PocketDoc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
