[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "structml"
version = "0.0.3"
authors = [
  { name="PocketDoc Labs", email="visuallyadequate@gmail.com" },
]
description = "A package for working with data using NLP and ML."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/PocketDocLabs/structml"
Issues = "https://github.com/PocketDocLabs/structml/issues"